--- a/Practical_courses_PopGen.Rmd
+++ b/Practical_courses_PopGen.Rmd
@@ -11,16 +11,28 @@ output:
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
+  
+  # Load read counts file, filtering
+  
+   ```{r }
+  source ("popgene_functions.R")  
+  
+ data=read.table('data/RC/OsimilisRC.txt',row.names = 1) 
 
-#   Estimation of the genomic differentiation
-##    Allele frequency spectrum
+ poplist = c("155","158","178","206","208","209","210")
+
+ hist(Osimilis_raw$GA155 + Osimilis_raw$GB155,breaks = 100)
+
+ data = FilteringCov(data,poplist,dev=2, minCov=5, maxCov = 150)
+ data = FilteringFreqExpression(data_filtered,poplist,GAF=0.1, TAF=0.05)
+  
+  hist(Osimilis_raw$GA155 + Osimilis_raw$GB155,breaks = 100)
+ ```
+  #   Estimation of the genomic differentiation
+  ##    Allele frequency spectrum
 
  ```{r }
- data=read.table('data/RC/S155.txt') 
- 
- colnames(data) = c("GA","GB","TA","TB") 
- 
- Gfreq = data$GB/(data$GA+data$GB)  
+ Gfreq = data$GB158/(data$GA158+data$GB158)  
  
  hist(Gfreq, breaks = 10, main="B allele frequency distribution")  
  ```
@@ -30,9 +42,10 @@ knitr::opts_chunk$set(echo = TRUE)
  ```{r }
 source ("popgene_functions.R")  
  
-freq = read.table("data/Genomic_frequencies.txt")  
+freq = CreateFreqMatrix(data,poplist) 
 
-colnames(freq) = c("TARA_155","TARA_158","TARA_178","TARA_206","TARA_208","TARA_209","TARA_210")  
+colnames(freq) = c("TARA_155","TARA_158","TARA_178","TARA_206","TARA_208","TARA_209","TARA_210")   
+
 
 pairwiseFST = pwFst(freq)  
 
@@ -44,22 +57,28 @@ plotFST(pairwiseFST)
  ## Isolation by distances
  
 ```{r}
+source ("popgene_functions.R") 
+
 euclideans = read.table("data/Euclidean_Arctic.txt", row.names=1,header = TRUE)
  
-#MantelPlot(euclideans,pairwiseFST)
+MantelPlot(euclideans,pairwiseFST)
  
 res_mantel_euclideans = mantel(vegdist(pairwiseFST),vegdist(euclideans))
 
+print(res_mantel_euclideans)
 ```
 
-## ISolation by currents
+## Isolation by currents
 
 ```{r }
 lagrangians = read.table("data/Lagrangian_Arctic.txt", row.names=1,header = TRUE)
  
-#MantelPlot(euclideans,pairwiseFST)
+MantelPlot(euclideans,pairwiseFST)
  
 res_mantel_lagrangians = mantel(vegdist(pairwiseFST),vegdist(lagrangians))
+
+print(res_mantel_lagrangians)
+
 
 ```
   
@@ -70,9 +89,9 @@ res_mantel_lagrangians = mantel(vegdist(pairwiseFST),vegdist(lagrangians))
   ```{r }
 source ("popgene_functions.R")  
  
-freq = read.table("data/Genomic_frequencies.txt")  
+freq = CreateFreqMatrix(data,poplist) 
 
-colnames(freq) = c("S155","S158","S178","S206","S208","S209","S210")  
+colnames(freq) = c("TARA_155","TARA_158","TARA_178","TARA_206","TARA_208","TARA_209","TARA_210")  
 
 LK = LK(freq)  
 
@@ -99,13 +118,17 @@ dim(selection_LK)
  ```{r}
 library(pcadapt)
  
-freq = read.table("data/Genomic_frequencies.txt")  
+freq = as.data.frame(CreateFreqMatrix(Osimilis_Analysis,poplist)) 
 
-colnames(freq) = c("S155","S158","S178","S206","S208","S209","S210")  
+colnames(freq) = c("TARA_155","TARA_158","TARA_178","TARA_206","TARA_208","TARA_209","TARA_210")   
 
-freq_forPCA = read.pcadapt(freq, type = "pool")
+freq_forPCA = read.pcadapt(t(freq), type = "pool")
 
-pcadapt_result <- pcadapt(t(freq_forPCA), K = 4)
+pcadapt_result <- pcadapt(freq_forPCA)
+
+plot(pcadapt_result, option = "scores", pop = colnames(freq))
+plot(pcadapt_result, option = "screeplot")
+plot(pcadapt_result, option = "qqplot")
 
 q_values = p.adjust(pcadapt_result$pvalues, method = "BH")
 
@@ -126,13 +149,10 @@ dim(freq[freq$pcadapt_qval<0.1 & freq$LK_qval<0.1,])
  ## Comparison of allele expression to genomic abundance
  
   ```{r }
- data=read.table('data/RC/S206.txt') 
+
+ Gfreq = data$GB206/(data$GA206+data$GB206)  
  
- colnames(data) = c("GA","GB","TA","TB")  
- 
- Gfreq = data$GB/(data$GA+data$GB)  
- 
- Tfreq = data$TB/(data$TA+data$TB) 
+ Tfreq = data$TB206/(data$TA206+data$TB206) 
  
  plot(Gfreq,Tfreq)  
  
@@ -140,26 +160,30 @@ dim(freq[freq$pcadapt_qval<0.1 & freq$LK_qval<0.1,])
  ```
  
  ## Detection of allele-specific expression (ASE)
- 
+ ## Example with TARA_206
  ```{r}
-  Fisher_pvalue = apply(data,1,function (x) fisher.test (matrix(x, nrow = 2))$p.value) 
-  
-  Fisher_qvalue = p.adjust(Fisher_pvalue, method="BH")  
+ 
+ASE_206 = data[,c("GA206","GB206","TA206","TB206")]
+ASE_206 = ASE_206[ASE_206[,1] >= 1 & ASE_206[,2] >= 1,]
+
+Fisher_pvalue = apply(ASE_206,1,function (x) fisher.test (matrix(x, nrow = 2))$p.value) 
+Fisher_qvalue = p.adjust(Fisher_pvalue, method="BH")  
+ 
+
  ```
  
  ## Link between natural selection and allele specific expression
  
   ```{r}
-  cutoff = 0.01
-  
-  selection_ASE_S206 = freq[freq$pcadapt_qval<cutoff &  Fisher_qvalue < cutoff,]   
-  
-  dim(selection_ASE_S206)
-  
-  phyper(nrow(selection_ASE_S206),   
-        nrow(freq[freq$pcadapt_qval<cutoff,]),  
-        nrow(freq)-nrow(freq[freq$pcadapt_qval<cutoff,]),  
-        length(Fisher_qvalue[Fisher_qvalue<cutoff] ))  
+
+selection_ASE_S206 = intersect(rownames(freq[freq$pcadapt_qval<0.05,]),
+                        rownames(ASE_206[ASE_206$Fisher_qvalue < 0.05,])) 
+
+phyper(length(selection_ASE_S206),   
+       nrow(freq[freq$pcadapt_qval<0.05,]),  
+       nrow(freq)-nrow(freq[freq$pcadapt_qval<0.05,]),  
+       length(Fisher_qvalue[Fisher_qvalue<0.05]),
+       lower.tail = F)  
   
  ```
  
@@ -189,6 +213,7 @@ envlist = list(Temperature = EnvTable[,c(1,7)],
              No3 = EnvTable[,c(1,5)])
 
 LagrangianMatrix = read.table("data/Lagrangian_Matrix.txt",header = T)
+
 ggplot(data = melt(as.matrix(LagrangianMatrix)), aes(Var1,Var2, fill = value)) + 
   geom_tile(color = "white",names ="Travel Time (days)") + scale_fill_viridis() + 
   theme(panel.border = element_blank(), panel.grid.major = element_blank(),
@@ -204,6 +229,7 @@ ggplot(data = melt(as.matrix(LagrangianMatrix)), aes(Var1,Var2, fill = value)) +
    ```{r}
    
 VariancePartition.Res = LinearMixedModelMVS(MVS.List[["Copepod"]],LagrangianMatrix,envlist)
+
 PlotLMM(VariancePartition.Res) 
 
   ```
